# free2shareAPI

./: .env.example  README.md  config.py  pyproject.toml
app/: __init__.py
app/configurations/: database.py
free_2_share/: __init__.py
free_2_share/configurations/: commands.py  database.py  views.py
free_2_share/models/: __init__.py  card_model.py  favorite_model.py  user_model.py
free_2_share/schema/: __init__.py  card_schema.py  user_schema.py
free_2_share/views/: __init__.py  card_view.py  user_view.py
migrations/versions/: cb3d59b238a6_.py  f75fa132a5fb_.py
