[tool.poetry]
name = "free2share"
version = "0.1.0"
description = ""
authors = ["abdielmartins <abdielmartins21@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
environs = "^9.3.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^2.7.0"
Flask-JWT-Extended = "^4.1.0"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
